# myorders

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  init.sh  manage.py  pyproject.toml
myorders/: asgi.py  env_sample.py  settings.py  settings_local_sample.py  settings_production.py  urls.py  wsgi.py
myorders/myorders/: settings.py  urls.py
order_history/: admin.py  apps.py  models.py  urls.py
order_history/fixtures/: dumpdata.json  fixture_category.json  fixture_manufacturer.json  fixture_producingarea.json  fixture_product.json  fixture_unit.json  fixture_vendor.json
order_history/static/order_history/css/: style.css
order_history/static/order_history/js/: change_url.js  popup.js  select_option.js
order_history/templatetags/: custom_tags.py
order_history/views/: category.py  create.py  delete.py  index.py  manufacturer.py  order.py  producing_area.py  producingarea.py  product.py  unit.py  update.py  vendor.py
templates/: base.html
templates/order_history/: close.html  create.html  delete.html  detail.html  index.html  top.html  update.html
templates/order_history/category/: create.html  delete.html  detail.html  index.html  update.html
templates/order_history/order/: create.html  detail.html  index.html  update.html
templates/order_history/product/: create.html  delete.html  index.html
templates/order_history/unit/: create.html  delete.html  index.html  update.html
