[tool.poetry]
name = "myorders"
version = "0.1.0"
description = "Orders history"
authors = ["mitty1293"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]
pygraphviz = "^1.9"
pydotplus = "^2.0.2"
django-extensions = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
