[tool.poetry]
name = "myorders"
version = "0.1.0"
description = "Orders history"
authors = ["mitty1293"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
mysqlclient = { version = "^2.1.1", optional = true }

[tool.poetry.dev-dependencies]
pygraphviz = { version = "^1.9", optional = true }
pydotplus = { version = "^2.0.2", optional = true }
django-extensions = "^3.1.5"

[tool.poetry.extras]
mysql = ["mysqlclient"]
graph_models = ["pygraphviz", "pydotplus"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
