[tool.poetry]
name = "myorders"
version = "0.1.0"
description = "Orders history"
authors = ["mitty1293"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
python-decouple = "^3.6"
mysqlclient = { version = "^2.1.1", optional = true }
django-debug-toolbar = "^4.0.0"
gunicorn = "^20.1.0"

[tool.poetry.extras]
mysql = ["mysqlclient"]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.flake8]
max-line-length = 119
extend-ignore = ["E203"]
